tests/errors/first_stage/operation/expected_operand/expected_operand.as
; expected an operand
mov #0
prn